--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.1 $
+# $Revision: 1.2 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -40,7 +40,7 @@ checkpoint = import.ok
 # this file must contain patient data in the format
 # defined by pat_format
 pat_file = patient.dat
-# currently always "xdt"
+# data format for pat_file, currently always "xdt"
 pat_format = xdt
 
 # list of base directories, where individual document
