--- a/gnumed/gnumed/test-area/blobs_hilbert/viewer-tree/show-med_docs.conf.sample
+++ b/gnumed/gnumed/test-area/blobs_hilbert/viewer-tree/show-med_docs.conf.sample
@@ -1,7 +1,7 @@
-# $Revision: 1.1 $
+# $Revision: 1.2 $
 
 # the database connection
-[sink]
+[database]
 user = 
 password = 
 host = 
@@ -10,20 +10,9 @@ database =
 #options = None
 #tty = None
 
-[metadata]
-# read patient data from here
-patient = patient.dat
-# read document metadata from here
-description = befunde.xml
-
-# XML tags for document metadata
-date_tag = Obj_Datum
-type_tag = Obj_Typ
-comment_tag = Obj_Name
-ref_tag = Obj_Referenz
-
 [export]
 # base directory for export related data
 basedir = /home/ncq/medituxarchiv/export
 # read patient data from here
-patient = patient.dat
+pat_file = patient.dat
+pat_format = xdt
