- updated to current options

--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.2 $
+# $Revision: 1.3 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -18,66 +18,122 @@
 # Alternatively, you can hand over the config file via the command
 # line option "--conf-file=<conf-file-name>".
 #-----------------------------------------------------------------
+# merged cfg file for index, scan and view
+#-----------------------------------------
 
+[metadata]
+# read document metadata from here
+description = document.xml
+
+# if this exists index can proceed, eg. scan is assumed to have been completed
+can_index = index.ok
+can_import = import.ok
+now_indexing = indexing.now
+
+# this must be set to a unique string per machine that you use index-med_docs on, 
+# it is used to detect document directories that were locked for
+# indexing but not finished due to a crash
+indexing_cookie = a_unique_string_per_machine
+
+# these are the valid document types
+# they need to be sync'ed with what's in the database
+doctypes = $doctypes$
+Entlassung Chirurgie
+Entlassung Interne
+Entlassung Psychatrie
+Entlassung Reha
+Entlassung Orthopädie
+Arztbrief Chirurgie
+Arztbrief Orthopädie
+Arztbrief Innere
+Arztbrief Neurologie
+Arztbrief Psychotherapie
+Arztbrief Radiologie
+Arztbrief Umweltmedizin
+Arztbrief Mikrobiologie
+Labor
+$doctypes$
+
+# read patient data from here
+#patient_file = c:\My Documents\GnuMed-Archiv\data\pat_idx.dat
+#patient_file = c:\Eigene Dateien\GnuMed-Archiv\data\pat_idx.dat
+patient_file = ~/gnumed/pat_idx.dat
+
+# which format is the patient file in ?
+patient_format = xdt
+
+# XML tags for document metadata
+document_tag = document
+name_tag = last_name
+firstname_tag = first_name
+birth_tag = dob
+date_tag = doc_date
+type_tag = doc_type
+comment_tag = doc_comment
+aux_comment_tag = doc_desc
+ref_tag = doc_ref
+obj_tag = object
+
+#-------------------------------
+[repositories]
+
+# - directories below this one need to be indexed
+# - on Windows use something like "c:\My Documents\GnuMed-Archiv\data\scans\"
+# - it also makes sense to point this to a directory
+#   exported from a server
+#to_index = c:\My Documents\GnuMed-Archiv\data\scans\
+#to_index = c:\Eigene Dateien\GnuMed-Archiv\data\scans\
+to_index = ~/gnumed/scans/
+
+# - this should sit on the fastest disk/RAM disk you have
+#scan_tmp = c:\WINDOWS\TEMP\
+#scan_tmp = /tmp/
+#scan_tmp = /tmp/gnumed/
+scan_tmp = ~/gnumed/tmp/
+
+# - this may or may not be the same as to_index depending
+#   on your indexing client and your setup
+#import = c:\My Documents\GnuMed-Archiv\data\scans\
+#import = c:\Eigene Dateien\GnuMed-Archiv\data\scans\
+import = ~/gnumed/scans/
+
+#-------------------------------
+[scanning]
+
+# - this is the mode for document ID generation
+# 1) random      - generate random unique IDs
+# 2) consecutive - generate consecutive (but still unique) numbers
+#document_ID_mode = consecutive
+document_ID_mode = random
+
+# - this is where the last used document ID is stored in case
+#   you use consecutive numbering of documents
+#document_ID_file = c:\Eigene Dateien\GnuMed-Archiv\data\last_doc_ID.dat
+#document_ID_file = c:\My Documents\GnuMed-Archiv\data\last_doc_ID.dat
+document_ID_file = ~/.gnumed/last_doc_ID.dat
+
+# - do you want to see the final document ID so you can put it
+#   on the originals ?
+#show_document_ID = no
+show_document_ID = yes
+
+#===============================
 # the database connection
 [database]
-user = your_name
-password = your_password
-host = your_host
+user = 
+password = 
+host = 
 port = 5432
-database = gnumed
+database = 
 #options = None
 #tty = None
 
+# scanning:
+# hand this over as the first argument !
 
-# import related configuration
-[import]
-
-# if this file exists database import can proceed,
-# eg. frontend work is assumed to be complete
-checkpoint = import.ok
-
-# this file must contain patient data in the format
-# defined by pat_format
-pat_file = patient.dat
-# data format for pat_file, currently always "xdt"
-pat_format = xdt
-
-# list of base directories, where individual document
-# directories are found,
-# multiple entries separated by blanks
-repositories = ./repository/
-
-# read document metadata from here
-description = metadata.xml
-
-# XML tags for document metadata:
-# when was the object content created
-# (i.e. the date of creation of the health data)
-date_tag = obj_date
-
-# what type of content does the document hold
-type_tag = obj_type
-
-# a short comment about the document
-comment_tag = obj_comment
-
-# an identifier that links physical documents to digital objects
-ref_tag = obj_reference
-
-# a long description of the document
-# may be a text version of a scanned text
-desc_tag = obj_description
-
-
-# export/viewing related configuration
-[export]
-
-# where to look for patient data and store exported results
-target = ./export/
-
-# this file must contain patient data in the format
-# defined by pat_format
-pat_file = patient.dat
-# currently always "xdt"
-pat_format = xdt
+# configure if you want to use special preferences or not
+# 0 --> No, I want to use the twain/sane gui to adjust options
+# 1 --> Yes please let me do so
+# the details are in scan-config.ini
+[activate]
+setting = 0
