--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.3 $
+# $Revision: 1.4 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -25,16 +25,6 @@
 # read document metadata from here
 description = document.xml
 
-# if this exists index can proceed, eg. scan is assumed to have been completed
-can_index = index.ok
-can_import = import.ok
-now_indexing = indexing.now
-
-# this must be set to a unique string per machine that you use index-med_docs on, 
-# it is used to detect document directories that were locked for
-# indexing but not finished due to a crash
-indexing_cookie = a_unique_string_per_machine
-
 # these are the valid document types
 # they need to be sync'ed with what's in the database
 doctypes = $doctypes$
@@ -54,14 +44,6 @@ Arztbrief Mikrobiologie
 Labor
 $doctypes$
 
-# read patient data from here
-#patient_file = c:\My Documents\GnuMed-Archiv\data\pat_idx.dat
-#patient_file = c:\Eigene Dateien\GnuMed-Archiv\data\pat_idx.dat
-patient_file = ~/gnumed/pat_idx.dat
-
-# which format is the patient file in ?
-patient_format = xdt
-
 # XML tags for document metadata
 document_tag = document
 name_tag = last_name
@@ -75,23 +57,44 @@ ref_tag = doc_ref
 obj_tag = object
 
 #-------------------------------
-[repositories]
+[index]
+
+# if this checkpoint file exists, indexing can start on a directory
+checkpoint file = index.ok
+
+# if this semaphore file exists, a directory is locked by some other indexing process
+lock file = indexing.now
+
+# this must be set to a unique string per machine that you do indexing on,
+# it is used to detect document directories that were locked for
+# indexing but not finished due to a crash
+cookie = a_unique_string_per_machine
+
+# read patient data from here
+#patient file = c:\My Documents\GnuMed-Archiv\data\pat_idx.dat
+#patient file = c:\Eigene Dateien\GnuMed-Archiv\data\pat_idx.dat
+patient file = ~/gnumed/pat_idx.dat
+
+# which format is the patient file in ?
+patient format = xdt
 
 # - directories below this one need to be indexed
 # - on Windows use something like "c:\My Documents\GnuMed-Archiv\data\scans\"
 # - it also makes sense to point this to a directory
 #   exported from a server
-#to_index = c:\My Documents\GnuMed-Archiv\data\scans\
-#to_index = c:\Eigene Dateien\GnuMed-Archiv\data\scans\
-to_index = ~/gnumed/scans/
+#repository = c:\My Documents\GnuMed-Archiv\data\scans\
+#repository = c:\Eigene Dateien\GnuMed-Archiv\data\scans\
+repository = ~/gnumed/scans/
 
-# - this should sit on the fastest disk/RAM disk you have
-#scan_tmp = c:\WINDOWS\TEMP\
-#scan_tmp = /tmp/
-#scan_tmp = /tmp/gnumed/
-scan_tmp = ~/gnumed/tmp/
+#-------------------------------
+[import]
 
-# - this may or may not be the same as to_index depending
+checkpoint file = import.ok
+
+#-------------------------------
+[repositories]
+
+# - this may or may not be the same as index.repository depending
 #   on your indexing client and your setup
 #import = c:\My Documents\GnuMed-Archiv\data\scans\
 #import = c:\Eigene Dateien\GnuMed-Archiv\data\scans\
@@ -103,19 +106,25 @@ import = ~/gnumed/scans/
 # - this is the mode for document ID generation
 # 1) random      - generate random unique IDs
 # 2) consecutive - generate consecutive (but still unique) numbers
-#document_ID_mode = consecutive
-document_ID_mode = random
+#document ID mode = consecutive
+document ID mode = random
 
-# - this is where the last used document ID is stored in case
-#   you use consecutive numbering of documents
-#document_ID_file = c:\Eigene Dateien\GnuMed-Archiv\data\last_doc_ID.dat
-#document_ID_file = c:\My Documents\GnuMed-Archiv\data\last_doc_ID.dat
-document_ID_file = ~/.gnumed/last_doc_ID.dat
+# - this is where the most recently used document ID is stored
+#   if you use consecutive numbering of documents
+#document ID file = c:\Eigene Dateien\GnuMed-Archiv\data\last_doc_ID.dat
+#document ID file = c:\My Documents\GnuMed-Archiv\data\last_doc_ID.dat
+document ID file = ~/.gnumed/last_doc_ID.dat
 
-# - do you want to see the final document ID so you can put it
-#   on the originals ?
-#show_document_ID = no
-show_document_ID = yes
+# - do you want to see the final document ID so you can put
+#   it on the originals ?
+#show document ID = no
+show document ID = yes
+
+# - this should sit on the fastest disk/RAM disk you have
+#tmp = c:\WINDOWS\TEMP\
+#tmp = /tmp/
+#tmp = /tmp/gnumed/
+tmp = ~/gnumed/tmp/
 
 #===============================
 # the database connection
@@ -128,6 +137,7 @@ database =
 #options = None
 #tty = None
 
+####################################################
 # scanning:
 # hand this over as the first argument !
 
@@ -135,5 +145,5 @@ database =
 # 0 --> No, I want to use the twain/sane gui to adjust options
 # 1 --> Yes please let me do so
 # the details are in scan-config.ini
-[activate]
-setting = 0
+#[activate]
+#setting = 0
