- first real steps: connect and verify database version

--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,15 +6,15 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 # where to install the users/groups
 [server]
 # minimum version for proper operation
-version = 7.2
+version = 7.1
 
-name = anubis	# fill in your server name/IP here
+name = localhost	# fill in your server name/IP here
 port = 5432		# standard is 5432
 
 # these shouldn't be changed, really
@@ -36,7 +36,7 @@ $groups$
 
 # list all the users here that you want to set up,
 # you will then need to define a [section] per user giving more detail,
-# you should definitly disable the sample account "gm-user" and
+# you should definitely disable the sample account "gm-user" and
 # define your own accounts
 names = $names$
 gm-user
@@ -47,14 +47,22 @@ $names$
 # just a string to display during creation
 comment = a sample account, shouldn't be used in production
 
+valid until = 2003-12-31
+
 # which groups this user shall belong to
 groups = $groups$
-gm-std-writers
 gm-std-readers
 $groups$
 
+# custom SQL commands for this user
+custom = $custom$
+$custom$
+
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.1  2002-09-30 23:06:26  ncq
+# Revision 1.2  2002-10-03 00:16:20  ncq
+# - first real steps: connect and verify database version
+#
+# Revision 1.1  2002/09/30 23:06:26  ncq
 # - first shot so people can see what I am getting at
 #
