- add a clarifying comment

--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 # where to install the users/groups
@@ -34,10 +34,17 @@ $groups$
 #----------------------------------
 [users]
 
-# list all the users here that you want to set up,
-# you will then need to define a [section] per user giving more detail,
-# you should definitely disable the sample account "gm-user" and
-# define your own accounts
+# - list all the users here that you want to set up
+# - you will then need to define a [section] per user
+#   giving more detail
+# - the necessary _<user> shadow account will be created
+#   automagically
+# - it will be added to the same groups as the standard
+#   account plus the gm-std-writers group
+# - THIS NEEDS REFINEMENT !
+#
+# - you should definitely disable the sample account
+#   "gm-user" and define your own accounts
 names = $names$
 gm-user
 $names$
@@ -60,7 +67,10 @@ $custom$
 
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.2  2002-10-03 00:16:20  ncq
+# Revision 1.3  2002-10-03 00:22:37  ncq
+# - add a clarifying comment
+#
+# Revision 1.2  2002/10/03 00:16:20  ncq
 # - first real steps: connect and verify database version
 #
 # Revision 1.1  2002/09/30 23:06:26  ncq
