--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 # where to install the users/groups
@@ -24,7 +24,7 @@ user = postgres
 #----------------------------------
 # these really shouldn't be changed
 [standards]
-gnumed owner = gm-db-owner
+gnumed database owner = gmdbowner
 
 groups = $groups$
 gm-std-writers
@@ -67,7 +67,10 @@ $custom$
 
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.3  2002-10-03 00:22:37  ncq
+# Revision 1.4  2002-10-03 14:05:36  ncq
+# - actually create the gnumed superuser
+#
+# Revision 1.3  2002/10/03 00:22:37  ncq
 # - add a clarifying comment
 #
 # Revision 1.2  2002/10/03 00:16:20  ncq
