--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.4 $
+version = $Revision: 1.5 $
 
 #----------------------------------
 # where to install the users/groups
@@ -15,7 +15,7 @@ version = $Revision: 1.4 $
 version = 7.1
 
 name = localhost	# fill in your server name/IP here
-port = 5432		# standard is 5432
+port = 5432			# standard is 5432
 
 # these shouldn't be changed, really
 database = template1
@@ -24,11 +24,11 @@ user = postgres
 #----------------------------------
 # these really shouldn't be changed
 [standards]
-gnumed database owner = gmdbowner
+gnumed database owner = gmdb-owner
 
 groups = $groups$
-gm-std-writers
-gm-std-readers
+doctors
+_doctors
 $groups$
 
 #----------------------------------
@@ -37,20 +37,16 @@ $groups$
 # - list all the users here that you want to set up
 # - you will then need to define a [section] per user
 #   giving more detail
-# - the necessary _<user> shadow account will be created
-#   automagically
-# - it will be added to the same groups as the standard
-#   account plus the gm-std-writers group
-# - THIS NEEDS REFINEMENT !
 #
 # - you should definitely disable the sample account
-#   "gm-user" and define your own accounts
+#   and define your own users
 names = $names$
-gm-user
+a-doc
+_a-doc
 $names$
 
 #----------------------------------
-[gm-user]
+[a-doc]
 # just a string to display during creation
 comment = a sample account, shouldn't be used in production
 
@@ -58,7 +54,24 @@ valid until = 2003-12-31
 
 # which groups this user shall belong to
 groups = $groups$
-gm-std-readers
+doctors
+$groups$
+
+# custom SQL commands for this user
+custom = $custom$
+$custom$
+
+#----------------------------------
+[_a-doc]
+# just a string to display during creation
+comment = a sample account, shouldn't be used in production
+
+valid until = 2003-12-31
+
+# which groups this user shall belong to
+groups = $groups$
+doctors
+_doctors
 $groups$
 
 # custom SQL commands for this user
@@ -67,7 +80,10 @@ $custom$
 
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.4  2002-10-03 14:05:36  ncq
+# Revision 1.5  2002-10-04 15:49:08  ncq
+# - name default users/groups usefully
+#
+# Revision 1.4  2002/10/03 14:05:36  ncq
 # - actually create the gnumed superuser
 #
 # Revision 1.3  2002/10/03 00:22:37  ncq
