- seems to fully work now

--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 # where to install the users/groups
@@ -31,25 +31,19 @@ doctors
 _doctors
 $groups$
 
-#----------------------------------
-[users]
-
 # - list all the users here that you want to set up
 # - you will then need to define a [section] per user
 #   giving more detail
 #
 # - you should definitely disable the sample account
 #   and define your own users
-names = $names$
-a-doc
-_a-doc
-$names$
+users = $users$
+test-doc
+_test-doc
+$users$
 
 #----------------------------------
-[a-doc]
-# just a string to display during creation
-comment = a sample account, shouldn't be used in production
-
+[test-doc]
 valid until = 2003-12-31
 
 # which groups this user shall belong to
@@ -62,10 +56,7 @@ custom = $custom$
 $custom$
 
 #----------------------------------
-[_a-doc]
-# just a string to display during creation
-comment = a sample account, shouldn't be used in production
-
+[_test-doc]
 valid until = 2003-12-31
 
 # which groups this user shall belong to
@@ -80,7 +71,10 @@ $custom$
 
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.5  2002-10-04 15:49:08  ncq
+# Revision 1.6  2002-10-08 14:08:37  ncq
+# - seems to fully work now
+#
+# Revision 1.5  2002/10/04 15:49:08  ncq
 # - name default users/groups usefully
 #
 # Revision 1.4  2002/10/03 14:05:36  ncq
