--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/sample.conf
@@ -1,6 +1,6 @@
 # sample config file for GNUmed document archive binaries
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/sample.conf,v $
-# $Revision: 1.4 $
+# $Revision: 1.5 $
 #-----------------------------------------------------------------
 # The config file needs to have the same name as the binary
 # with .py replaced by .conf so that the config file can be
@@ -125,6 +125,10 @@ show document ID = yes
 #tmp = /tmp/
 #tmp = /tmp/gnumed/
 tmp = ~/gnumed/tmp/
+
+# do we do barcodes ?
+generate barcode = yes
+barcode generation command = barcode -e 128
 
 #===============================
 # the database connection
