- now has support for site-specific configuration in a separate file - remembers passwords from "usr" to "_usr"

--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 # where to install the users/groups
@@ -23,13 +23,31 @@ user = postgres
 
 #----------------------------------
 # these really shouldn't be changed
-[standards]
+[defaults]
 gnumed database owner = gmdb-owner
 
+# - these are the standard groups that exist
+#   in every GnuMed database
+# - note how some groups don't have a write-enabled counterpart
+# - you can define (and probably should) define site-specific
+#   groups in another file
+# - at the end of the setup you'll be asked if you want to
+#   install your site-specific groups/users, too
 groups = $groups$
 doctors
 _doctors
+staff_medical
+_staff_medical
+staff_office
+_staff_office
+trainees_medical
+trainees_office
 $groups$
+
+#----------------------------------
+# this is a setup for testing
+# don't use this on a production server
+[test users]
 
 # - list all the users here that you want to set up
 # - you will then need to define a [section] per user
@@ -40,6 +58,10 @@ $groups$
 users = $users$
 test-doc
 _test-doc
+test-nurse
+_test-nurse
+test-secretary
+_test-secretary
 $users$
 
 #----------------------------------
@@ -70,8 +92,66 @@ custom = $custom$
 $custom$
 
 #----------------------------------
+[test-nurse]
+valid until = 2003-12-31
+
+# which groups this user shall belong to
+groups = $groups$
+staff_medical
+$groups$
+
+# custom SQL commands for this user
+custom = $custom$
+$custom$
+
+#----------------------------------
+[_test-nurse]
+valid until = 2003-12-31
+
+# which groups this user shall belong to
+groups = $groups$
+staff_medical
+_staff_medical
+$groups$
+
+# custom SQL commands for this user
+custom = $custom$
+$custom$
+
+#----------------------------------
+[test-secretary]
+valid until = 2003-12-31
+
+# which groups this user shall belong to
+groups = $groups$
+staff_office
+$groups$
+
+# custom SQL commands for this user
+custom = $custom$
+$custom$
+
+#----------------------------------
+[_test-secretary]
+valid until = 2003-12-31
+
+# which groups this user shall belong to
+groups = $groups$
+staff_office
+_staff_office
+$groups$
+
+# custom SQL commands for this user
+custom = $custom$
+$custom$
+
+#----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.6  2002-10-08 14:08:37  ncq
+# Revision 1.7  2002-10-20 15:29:14  ncq
+# - now has support for site-specific configuration in a separate file
+# - remembers passwords from "usr" to "_usr"
+#
+# Revision 1.6  2002/10/08 14:08:37  ncq
 # - seems to fully work now
 #
 # Revision 1.5  2002/10/04 15:49:08  ncq
