- we can use spaces in item names

--- a/gnumed/gnumed/test-area/gmDrug/amis.conf
+++ b/gnumed/gnumed/test-area/gmDrug/amis.conf
@@ -1,23 +1,24 @@
 # AMIS config file
+# move this to ~/.gnumed/amis.conf
 
 [test1]
-type=query
-querygroup=brand
-variables=brandname
-query=select brandname from amis_praeparate WHERE atc_code ~ '^C02A';
-mappings=
+type = query
+query name = brand
+variables = brandname
+query = select brandname from amis_praeparate WHERE atc_code ~ '^C02A';
+mappings =
 
 [test1.0]
-type=query
-querygroup=brand
-variables=brandname_3
-query=select brandname from amis_praeparate WHERE atc_code ~ '^C03';
-mappings=
+type = query
+query name = brand
+variables = brandname_3
+query = select brandname from amis_praeparate WHERE atc_code ~ '^C03';
+mappings =
 
 
 [test2]
-type=query
-querygroup=brand_all
-variables=brandname
-query=select brandname from amis_praeparate LIMIT 20000;
+type = query
+query name = brand_all
+variables = brandname
+query = select brandname from amis_praeparate LIMIT 20000;
 mappings=
