more cleanup, fixed some bugs regarding variable mapping

--- a/gnumed/gnumed/test-area/gmDrug/amis.conf
+++ b/gnumed/gnumed/test-area/gmDrug/amis.conf
@@ -1,24 +1,70 @@
 # AMIS config file
-# move this to ~/.gnumed/amis.conf
 
 [test1]
-type = query
-query name = brand
-variables = brandname
-query = select brandname from amis_praeparate WHERE atc_code ~ '^C02A';
-mappings =
+type=query
+querygroup=brand
+variables=brandname
+query=$query$
+select brandname from amis_praeparate WHERE atc_code ~ '^C02A';
+$query$
+mappings=
 
 [test1.0]
-type = query
-query name = brand
-variables = brandname_3
-query = select brandname from amis_praeparate WHERE atc_code ~ '^C03';
-mappings =
+type=aaaquery
+querygroup=brand
+variables=brandname_3
+query=select brandname from amis_praeparate WHERE atc_code ~ '^C03';
+mappings=
 
 
 [test2]
-type = query
-query name = brand_all
-variables = brandname
-query = select brandname from amis_praeparate LIMIT 20000;
+type=aaaquery
+querygroup=brand_all
+variables=brandname
+query=select brandname from amis_praeparate LIMIT 20000;
 mappings=
+
+[PI_Warnings1]
+type=query
+querygroup=product_info
+query=$query$
+select drug_text from amis_drug_description where text_key=%s and type=1
+$query$
+variables=dosage
+mappings=ID
+
+[PI_Warnings2]
+type=query
+querygroup=product_info
+query=$query$
+select drug_text from amis_drug_description where text_key=%s and type=2
+$query$
+variables=hints
+mappings=ID
+
+[PI_Warnings3]
+type=query
+querygroup=product_info
+query=$query$
+select drug_text from amis_drug_description where text_key=%s and type=3
+$query$
+variables=KI
+mappings=ID
+
+[PI_Warnings4]
+type=query
+querygroup=product_info
+query=$query$
+select drug_text from amis_drug_description where text_key=%s and type=4
+$query$
+variables=indication
+mappings=ID
+
+[PI_Warnings5]
+type=query
+querygroup=product_info
+query=$query$
+select drug_text from amis_drug_description where text_key=%s and type=5
+$query$
+variables=AE
+mappings=ID
