first partially functional DrugReferenceBrowser version

--- a/gnumed/gnumed/test-area/gmDrug/amis.conf
+++ b/gnumed/gnumed/test-area/gmDrug/amis.conf
@@ -1,54 +1,207 @@
 # AMIS config file
 
-[test1]
+#-----------------------INDEX BRANDNAME--------------------------
+[brand_index1]
 type=query
-querygroup=brand
-variables=brandname
+querygroup=brand_index_exact
 query=$query$
-select brandname from amis_praeparate WHERE atc_code ~ '^C02A';
+select brandname,connection_id,drug_descriptive_text_key from amis_praeparate where lower(brandname) like '%s%%' order by brandname ASC
 $query$
-mappings=
+variables=name,id,type
+mappings=Key
 
-[test1.0]
-type=aaaquery
-querygroup=brand
-variables=brandname_3
-query=select brandname from amis_praeparate WHERE atc_code ~ '^C03';
-mappings=
+#------------------- product_info -------------------------------
+
+[Darreichung_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=0
+usedvars=presentation
+heading=$heading$
+Darreichung
+$heading$
+format=$format$
+%(presentation)s (Codes siehe Hilfe->Darreichung)
+$format$
+
+[Darreichung]
+type=query
+querygroup=product_info
+query=$query$
+select drug_presentation from amis_praeparate where connection_id=%s
+$query$
+variables=presentation
+mappings=ID
+
+#--------------------------------------------------------------------
+
+[VWR]
+type=query
+querygroup=product_info
+query=$query$
+select volume_weight_value, volume_weight_unit, volume_weight_description from amis_praeparate where connection_id=%s
+$query$
+variables=vwv,vwu,vwd 
+mappings=ID
+
+[DoseRelation]
+type=query
+querygroup=product_info
+query=$query$
+select dose_relation_value, dose_relation_description from amis_praeparate where connection_id=%s
+$query$
+variables=drv,drd 
+mappings=ID
 
 
-[test2]
-type=aaaquery
-querygroup=brand_all
-variables=brandname
-query=select brandname from amis_praeparate LIMIT 20000;
-mappings=
+[VWR_format0]
+type=format
+querygroup=product_info
+formattype=heading
+position=1
+heading=$heading$
+Dosisbezug
+$heading$
+format=$format$
+$format$
+
+
+[VWR_format1]
+type=format
+querygroup=product_info
+formattype=noheading
+usedvars=drv,drd
+position=2
+format=$format$
+
+%(drv)s %(drd)s
+$format$
+
+[VWR_format2]
+type=format
+querygroup=product_info
+formattype=noheading
+position=3
+usedvars=vwv,vwu,vwd
+format=$format$
+( %(vwv)s %(vwu)s %(vwd)s )
+$format$
+
+#-----------------------------------------------------------------------------------------------------
+[Hersteller]
+type=query
+querygroup=product_info
+query=$query$
+select manufacturer_name_long from amis_manufacturer as a, amis_praeparate as p where a.manufacturer_key=p.manufacturer_key and p.connection_id=%s
+$query$
+variables=manufacturer
+mappings=ID
+
+[Hersteller_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=4
+usedvars=manufacturer
+heading=$heading$
+Hersteller
+$heading$
+format=$format$
+%(manufacturer)s 
+$format$
+
+#------------------------------------------------------------------------------------------------------
+[HinweisDosierung_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=10
+usedvars=dosage_hints
+heading=$heading$
+Hinweise zur Dosierung
+$heading$
+format=$format$
+%(dosage_hints)s 
+$format$
+
+[HinweisAllgemein_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=11
+usedvars=general_hints
+heading=$heading$
+Allgemeine Hinweise
+$heading$
+format=$format$
+%(general_hints)s 
+$format$
+
+[HinweisKI_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=12
+usedvars=KI_hints
+heading=$heading$
+Kontraindikationen
+$heading$
+format=$format$
+%(KI_hints)s 
+$format$
+
+[HinweiseAE_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=13
+usedvars=AE_hints
+heading=$heading$
+Unerwünschte Nebenwirkungen
+$heading$
+format=$format$
+%(AE_hints)s
+$format$
+
+[HinweisIndikation_Format]
+type=format
+querygroup=product_info
+formattype=single
+position=14
+usedvars=indication_hints
+heading=$heading$
+Indikationen
+$heading$
+format=$format$
+%(indication_hints)s
+$format$
 
 [PI_Warnings1]
 type=query
 querygroup=product_info
 query=$query$
-select drug_text from amis_drug_description where text_key=%s and type=1
+select drug_text from amis_drug_description as a, amis_praeparate as p where a.text_key=p.drug_descriptive_text_key and p.connection_id=%s and type=1
 $query$
-variables=dosage
+variables=dosage_hints
 mappings=ID
 
 [PI_Warnings2]
 type=query
 querygroup=product_info
 query=$query$
-select drug_text from amis_drug_description where text_key=%s and type=2
+select drug_text from amis_drug_description as a, amis_praeparate as p where a.text_key=p.drug_descriptive_text_key and p.connection_id=%s and type=2
 $query$
-variables=hints
+variables=general_hints
 mappings=ID
 
 [PI_Warnings3]
 type=query
 querygroup=product_info
 query=$query$
-select drug_text from amis_drug_description where text_key=%s and type=3
+select drug_text from amis_drug_description as a, amis_praeparate as p where a.text_key=p.drug_descriptive_text_key and p.connection_id=%s and type=3
 $query$
-variables=KI
+variables=KI_hints
 mappings=ID
 
 [PI_Warnings4]
@@ -56,15 +209,41 @@ type=query
 querygroup=product_info
 query=$query$
 select drug_text from amis_drug_description where text_key=%s and type=4
+select drug_text from amis_drug_description as a, amis_praeparate as p where a.text_key=p.drug_descriptive_text_key and p.connection_id=%s and type=4
 $query$
-variables=indication
+variables=indication_hints
 mappings=ID
 
 [PI_Warnings5]
 type=query
 querygroup=product_info
 query=$query$
-select drug_text from amis_drug_description where text_key=%s and type=5
+select drug_text from amis_drug_description as a, amis_praeparate as p where a.text_key=p.drug_descriptive_text_key and p.connection_id=%s and type=5
 $query$
-variables=AE
+variables=AE_hints
 mappings=ID
+
+#-----------------------------------------------------------------------------
+
+[Indikation1n]
+type=query
+querygroup=indications
+query=$query$
+select indication_name from amis_indications as a, amis_praeparate as p where a.indication_key=p.indication_key_1 and p.connection_id=%s
+$query$
+variables=Indikation_1
+mappings=ID
+
+[Indikation2n]
+type=query
+querygroup=indications
+query=$query$
+select indication_name from amis_indications as a, amis_praeparate as p where a.indication_key=p.indication_key_2 and p.connection_id=%s
+$query$
+variables=Indikation_2
+mappings=ID
+
+
+
+
+
