- consistenly use "gm-" prefix for GnuMed groups/users (except for test users)

--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 # where to install the users/groups
@@ -24,7 +24,7 @@ user = postgres
 #----------------------------------
 # these really shouldn't be changed
 [defaults]
-gnumed database owner = gmdb-owner
+gnumed database owner = gm-dbowner
 
 # - these are the standard groups that exist
 #   in every GnuMed database
@@ -34,14 +34,15 @@ gnumed database owner = gmdb-owner
 # - at the end of the setup you'll be asked if you want to
 #   install your site-specific groups/users, too
 groups = $groups$
-doctors
-_doctors
-staff_medical
-_staff_medical
-staff_office
-_staff_office
-trainees_medical
-trainees_office
+gm-doctors
+_gm-doctors
+gm-staff_medical
+_gm-staff_medical
+gm-staff_office
+_gm-staff_office
+gm-trainees_medical
+gm-trainees_office
+gm-members
 $groups$
 
 #----------------------------------
@@ -71,6 +72,7 @@ valid until = 2003-12-31
 # which groups this user shall belong to
 groups = $groups$
 doctors
+gm-members
 $groups$
 
 # custom SQL commands for this user
@@ -85,6 +87,7 @@ valid until = 2003-12-31
 groups = $groups$
 doctors
 _doctors
+gm-members
 $groups$
 
 # custom SQL commands for this user
@@ -98,6 +101,7 @@ valid until = 2003-12-31
 # which groups this user shall belong to
 groups = $groups$
 staff_medical
+gm-members
 $groups$
 
 # custom SQL commands for this user
@@ -112,6 +116,7 @@ valid until = 2003-12-31
 groups = $groups$
 staff_medical
 _staff_medical
+gm-members
 $groups$
 
 # custom SQL commands for this user
@@ -125,6 +130,7 @@ valid until = 2003-12-31
 # which groups this user shall belong to
 groups = $groups$
 staff_office
+gm-members
 $groups$
 
 # custom SQL commands for this user
@@ -139,6 +145,7 @@ valid until = 2003-12-31
 groups = $groups$
 staff_office
 _staff_office
+gm-members
 $groups$
 
 # custom SQL commands for this user
@@ -147,7 +154,10 @@ $custom$
 
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.7  2002-10-20 15:29:14  ncq
+# Revision 1.8  2002-10-29 22:54:06  ncq
+# - consistenly use "gm-" prefix for GnuMed groups/users (except for test users)
+#
+# Revision 1.7  2002/10/20 15:29:14  ncq
 # - now has support for site-specific configuration in a separate file
 # - remembers passwords from "usr" to "_usr"
 #
