- gm-public is intended to be a group holding _all_ gnumed users - useful for access to select on config/db setup etc.

--- a/gnumed/gnumed/server/utils/setup-users.conf
+++ b/gnumed/gnumed/server/utils/setup-users.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/utils/Attic/setup-users.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 # where to install the users/groups
@@ -42,7 +42,7 @@ gm-staff_office
 _gm-staff_office
 gm-trainees_medical
 gm-trainees_office
-gm-members
+gm-public
 $groups$
 
 #----------------------------------
@@ -72,7 +72,7 @@ valid until = 2003-12-31
 # which groups this user shall belong to
 groups = $groups$
 doctors
-gm-members
+gm-public
 $groups$
 
 # custom SQL commands for this user
@@ -87,7 +87,7 @@ valid until = 2003-12-31
 groups = $groups$
 doctors
 _doctors
-gm-members
+gm-public
 $groups$
 
 # custom SQL commands for this user
@@ -101,7 +101,7 @@ valid until = 2003-12-31
 # which groups this user shall belong to
 groups = $groups$
 staff_medical
-gm-members
+gm-public
 $groups$
 
 # custom SQL commands for this user
@@ -116,7 +116,7 @@ valid until = 2003-12-31
 groups = $groups$
 staff_medical
 _staff_medical
-gm-members
+gm-public
 $groups$
 
 # custom SQL commands for this user
@@ -130,7 +130,7 @@ valid until = 2003-12-31
 # which groups this user shall belong to
 groups = $groups$
 staff_office
-gm-members
+gm-public
 $groups$
 
 # custom SQL commands for this user
@@ -145,7 +145,7 @@ valid until = 2003-12-31
 groups = $groups$
 staff_office
 _staff_office
-gm-members
+gm-public
 $groups$
 
 # custom SQL commands for this user
@@ -154,7 +154,11 @@ $custom$
 
 #----------------------------------
 # $Log: setup-users.conf,v $
-# Revision 1.8  2002-10-29 22:54:06  ncq
+# Revision 1.9  2002-10-29 23:03:32  ncq
+# - gm-public is intended to be a group holding _all_ gnumed users
+# - useful for access to select on config/db setup etc.
+#
+# Revision 1.8  2002/10/29 22:54:06  ncq
 # - consistenly use "gm-" prefix for GnuMed groups/users (except for test users)
 #
 # Revision 1.7  2002/10/20 15:29:14  ncq
