added generic substance support, further improvements

--- a/gnumed/gnumed/test-area/gmDrug/amis.conf
+++ b/gnumed/gnumed/test-area/gmDrug/amis.conf
@@ -5,12 +5,36 @@
 type=query
 querygroup=brand_index_exact
 query=$query$
-select brandname,connection_id,drug_descriptive_text_key from amis_praeparate where lower(brandname) like '%s%%' order by brandname ASC
+select brandname,connection_id from amis_praeparate where lower(brandname) like '%s%%' order by brandname ASC
 $query$
-variables=name,id,type
+variables=name,id
 mappings=Key
 
+
+#-----------------------INDEX GENERIC SUBSTANCE NAME -----------------------
+[generic_index1]
+type=query
+querygroup=generic_index_exact
+query=$query$
+select substance_name,substance_id from amis_substances_names where lower(substance_name) like '%s%%' order by substance_name ASC
+$query$
+variables=name,id
+mappings=Key
+
+
+#-----------------------Brand products for GENERIC SUBSTANCE NAME -----------------------
+[brandsForGeneric]
+type=query
+querygroup=brandsForGeneric
+query=$query$
+select p.brandname,p.connection_id from amis_praeparate as p,amis_substances as s where s.connection_id=p.connection_id and s.id='%s' order by p.brandname ASC
+$query$
+variables=name,id
+mappings=ID
+
+
 #------------------- product_info -------------------------------
+
 
 [Darreichung_Format]
 type=format
@@ -245,5 +269,7 @@ mappings=ID
 
 
 
-
-
+# $Log: amis.conf,v $
+# Revision 1.5  2002-10-31 23:13:06  hinnef
+# added generic substance support, further improvements
+#
