--- a/gnumed/gnumed/test-area/gmDrug/gmDrugDisplay.conf
+++ b/gnumed/gnumed/test-area/gmDrug/gmDrugDisplay.conf
@@ -2,6 +2,9 @@
 # 
 # license: GPL
 
+[DrugReferenceBrowser]                                                          
+drugDBname=amis
+
 [amis]
 configfile = ./amis.conf
 
@@ -13,12 +16,15 @@ $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/gmDrug/gm
 $cvs source$
 
 cvs revision = $cvs revision$
-$Revision: 1.1 $
+$Revision: 1.2 $
 $cvs revision$
 
 changelog = $changelog$
 $Log: gmDrugDisplay.conf,v $
-Revision 1.1  2002-10-29 15:46:01  ncq
+Revision 1.2  2002-10-31 23:13:06  hinnef
+added generic substance support, further improvements
+
+Revision 1.1  2002/10/29 15:46:01  ncq
 - first check in
 
 $changelog$
